--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
+body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
+#app {
+    width: 100%;
+    height: 100vh;
+    background-color: grey;
+    display: flex;
+    justify-content: space-between;
+}
+
+.seccion{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#recuadro{
+    width: 40%;
+    height: 50%;
+    background-color: white;
+}
+
+#buttons{
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.button{
+    height: 40px;
+    width: 60px;
+    border: 1px solid black;
+    margin: 10px;
+    text-align: center;
+    padding-top: 10px;
+    cursor: pointer;
+}
+
+.button:hover{
+    transform: translateX(2px) translateY(2px);
+}
